# solidiscone

./: README.md  solidiscone.cabal
