name:                solidiscone
version:             0.1.0.0
synopsis:            Static analysis tool for Solidity smart contract code
-- description:
homepage:            https://github.com/githubuser/solidiscone#readme
license:             BSD3
license-file:        LICENSE
author:              Rory Sheldon
maintainer:          example@example.com
copyright:           2018 Rory Sheldon
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable solidiscone
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       alex,
                       happy
